User auth initial commit

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,238 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+$background-tint: #1734C1;
+$background-color: rgba(0, 0, 0, .7);
+$border-color-input: rgba(255, 255, 255, 0.42);
+$font-family: verdana;
+
+body {
+  background: url('https://i.imgur.com/GsDyBrC.jpg') no-repeat center center fixed;
+  background-size: cover;
+  &:after {
+    content: '';
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $background-tint;
+    opacity: .3;
+    z-index: -1;
+  }
+}
+
+
+.modal-content {
+  background-color: $background-color;
+  padding: 15px;
+  margin: 45px auto;
+  label, input, .icon {
+    color: #29b6f6!important;
+  }
+  .input-group__details {
+    &:before {
+      background-color: $border-color-input !important;
+    }
+  }
+}
+
+.navbar {
+  background-color: rgba(0,0,0,0.0);
+}
+
+.nav-links {
+  color: white;
+  font-family: $font-family
+}
+
+.nav-links::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width .3s;
+}
+
+.nav-links:hover::after {
+  width: 100%;
+  //transition: width .3s;
+}
+
+.hb-buttons:hover {
+    color: white;
+    text-decoration: none
+}
+
+.hb-buttons::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width .3s;
+}
+
+.hb-buttons:hover::after {
+  width: 100%;
+  //transition: width .3s;
+}
+
+.thumbnail > a:hover {
+  color: white;
+  background-color: transparent
+}
+
+.nav > li > a:hover {
+  color: white;
+  background-color: transparent
+}
+
+.icon-bar {
+  background-color: white
+}
+
+.thumbnail {
+  height: auto;
+  width: auto;
+  background-color: rgba(255, 233, 255, 0.5);
+  text-align: center;
+  font-family: $font-family;
+  border: none;
+  overflow: hidden;
+  color: white
+}
+
+.thumbnail-images {
+  color: #0000ff
+}
+
+.download-button {
+  color: #0000ff
+}
+
+.popover-title {
+  background-color: $background-color;
+  color: #29b6f6
+}
+
+.popover-content {
+  background-color: rgba(255, 233, 255, 0.5);
+  color: black
+}
+
+.dropdown-menu {
+  background-color: rgba(255, 233, 255, 0.7)
+}
+
+.thumbnail > img {
+  width: 100%;
+  height: 200px;
+}
+
+p {
+  text-align: center;
+  margin: 0 0 10px;
+  max-height: 19px;
+}
+
+.modal-title {
+  color: #29b6f6;
+  font-family: $font-family;
+  font-size: 20px;
+  text-align: center
+}
+
+.form-control {
+  background-color: transparent;
+  border-radius: 0;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+label {
+  color: white;
+  font-family: $font-family;
+}
+
+.hb-buttons {
+  width: 100%;
+  margin-top: 10px
+}
+
+.edit-div {
+  margin-top: 2px
+}
+
+.btn-primary {
+  background-color: transparent;
+  font-family: $font-family;
+  border-color: 1px solid #2e6da4;
+}
+
+.btn-secondary {
+  background-color: transparent;
+  font-family: $font-family;
+  border-color: 1px solid #2e6da4;
+}
+
+.edit-modal-buttons {
+  background-color: $background-color;
+  font-family: $font-family;
+  border: 1px solid;
+}
+
+.edit-modal-buttons:hover {
+  color: white;
+}
+
+.btn-info {
+  background-color: transparent;
+  font-family: $font-family;
+  border-color: 1px solid #2e6da4;
+}
+
+.frontSuccess {
+  z-index: 5000;
+  display: inline-block;
+  margin: 0px auto;
+  position: fixed;
+  transition: all 0.5s ease-in-out;
+  top: 20px;
+  left: 0px;
+  right: 0px;
+}
+
+.frontFailure {
+  z-index: 5000;
+  display: inline-block;
+  margin: 0px auto;
+  position: fixed;
+  transition: all 0.5s ease-in-out;
+  top: 20px;
+  left: 0px;
+  right: 0px;
+}
+
+.shake {
+  animation: shake 1s;
+}
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
