--- a/assets/scripts/templates/statsTile.handlebars
+++ b/assets/scripts/templates/statsTile.handlebars
@@ -1,39 +1,15 @@
-<div class='characterTiles' id='characterTilesId'>
-{{#each characters as |character|}}
 
-<table class="characterHolder" data-id="{{character.id}}">
-      <thead>
-        <tr>
-          <th scope="col"> {{character.name}}: {{character.player_class.name}}  </th>
-          <th scope="col"> Experience: {{character.xp}} </th>
-          <th scope="col"> Armor Class: {{character.armor}} </th>
-          <th scope="col"> Health: {{character.health}} </th>
-          <th scope="col"><div data-id="{{character.id}}" class="updateFormCharacterButton" id="updateHandleButton"><button  data-id="{{character.id}}" type="button" class="updateHandleButton btn btn-primary modal-button" data-toggle="modal" data-target="#updateCharacterModal{{character.id}}">Update Character</button>
-            <form data-id="{{character.id}}" class="dataAccess updateCharacter" id="updateCharacterId{{character.id}}">
-            <div class="modal fade errorTarget" id="updateCharacterModal{{character.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content handlebarModal">
-                  <div class="modal-header">
-                    <h3 class="modal-title" id="updateModalLabel">Update Character</h3>
-                  </div>
-                    <div class="modal-body">
-                      <div class="errorUpdateCharacter"></div>
-                      <div class="form-group">
-                      <label>Character Name</label>
-                      <input type="text" class="form-control" name="character[name]" id="characterUpdate" value="{{character.name}}" required>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </th>
-        <th scope="col"><button data-id="{{character.id}}" class="removeCharacterButton btn btn-primary modal-button">Remove Character</button></th>
-        <th scope="col"><button data-id="{{character.id}}" class="playCharacterButton btn btn-primary modal-button">Play Character</button></th>
-        </tr>
-      </thead>
-  </table>
-
-{{/each}}
+<div class="card bg-success text-white col-xs-4 col-centered mb-3">
+  <div class="card-body">
+    <h4 class="card-title">{{adventurer.name}}</h4>
+    <h6 class="card-subtitle mb-2">Armor Class: {{adventurer.armor}}</h6>
+    <h6 class="card-subtitle mb-2">Current Exp: {{adventurer.xp}}</h6>
+    <h6 class="card-subtitle mb-2">Strength: {{adventurer.player_class.str}} | Dexterity: {{adventurer.player_class.dex}}</h6>
+    <h6 class="card-subtitle mb-2">Constitution: {{adventurer.player_class.con}} | Wisdom: {{adventurer.player_class.wis}}</h6>
+    <h6 class="card-subtitle mb-2">Intelligence: {{adventurer.player_class.int}} | Charisma: {{adventurer.player_class.cha}}</h6>
+    <ul class="display-stats list-group">
+      <!-- <li class="list-group-item">Attack: {{attack}}</li> -->
+      <li class="list-group-item list-group-item-success">Health: {{adventurer.health}}</li>
+    </ul>
+  </div>
 </div>
