--- a/assets/scripts/templates/combatUi.handlebars
+++ b/assets/scripts/templates/combatUi.handlebars
@@ -1,7 +1,10 @@
+<div class='row'>
 <div class="card combat bg-info text-white col-xs-4 col-centered mb-3">
   <div class="card-body">
-    <button class="attackButton btn btn-primary">Attack</button>
+    <button type="button" class="attackButton btn btn-primary">Attack</button>
+    <button type="button" class="returnButton btn btn-primary">Return to Tavern</button>
     <label>Combat Log:</label>
-    <textarea class="combatLog" id="combatLogId" cols="20" rows="7" readonly></textarea>
+    <textarea class="combatLog" id="combatLogId" cols="30" rows="13" readonly></textarea>
   </div>
+</div>
 </div>
