--- a/assets/scripts/templates/monsterTiles.handlebars
+++ b/assets/scripts/templates/monsterTiles.handlebars
@@ -1,17 +1,16 @@
 <div class='monsterTiles' id='monsterTilesId'>
-{{#each monsters as |monster|}}
 
-<div class="card col-xs-3 col-centered text-white bg-danger mb-3">
+<div class="card col-xs-4 positionCardMon text-white bg-danger mb-3">
   <div class="card-body">
     <h4 class="card-title">{{monster.name}}</h4>
     <h6 class="card-subtitle mb-2">Armor Class: {{monster.armor}}</h6>
     <h6 class="card-subtitle mb-2">Exp worth: {{monster.xp}}</h6>
+    <h6 class="card-subtitle mb-2">Weapon: {{monster.weapon.name}} | Damage: {{monster.weapon.dice}}d{{monster.weapon.sides}}</h6>
     <ul class="display-stats list-group list-group-flush">
       <!-- <li class="list-group-item list-group-item-danger">Attack: {{attack}}</li> -->
-      <li class="list-group-item list-group-item-danger">Health: {{monster.health}}</li>
+      <li class="list-group-item monsterHealthDisplay list-group-item-danger">Health: {{monster.health}}</li>
     </ul>
   </div>
 </div>
 
-{{/each}}
 </div>
