--- a/assets/scripts/templates/statsTile.handlebars
+++ b/assets/scripts/templates/statsTile.handlebars
@@ -1,5 +1,5 @@
 
-<div class="card bg-success text-white col-xs-4 col-centered mb-3">
+<div class="card bg-success text-white positionCardChar col-xs-4 mb-3">
   <div class="card-body">
     <h4 class="card-title">{{adventurer.name}}</h4>
     <h6 class="card-subtitle mb-2">Armor Class: {{adventurer.armor}}</h6>
@@ -7,9 +7,9 @@
     <h6 class="card-subtitle mb-2">Strength: {{adventurer.player_class.str}} | Dexterity: {{adventurer.player_class.dex}}</h6>
     <h6 class="card-subtitle mb-2">Constitution: {{adventurer.player_class.con}} | Wisdom: {{adventurer.player_class.wis}}</h6>
     <h6 class="card-subtitle mb-2">Intelligence: {{adventurer.player_class.int}} | Charisma: {{adventurer.player_class.cha}}</h6>
+    <h6 class="card-subtitle mb-2">Equipment: {{adventurer.weapon.name}} | Damage: {{adventurer.weapon.dice}}d{{adventurer.weapon.sides}}</h6>
     <ul class="display-stats list-group">
-      <!-- <li class="list-group-item">Attack: {{attack}}</li> -->
-      <li class="list-group-item list-group-item-success">Health: {{adventurer.health}}</li>
+      <li class="list-group-item characterHealthDisplay list-group-item-success">Health: {{adventurer.health}}</li>
     </ul>
   </div>
 </div>
