Transfer fight logic due to dependency

--- a/assets/scripts/templates/characterScreen.handlebars
+++ b/assets/scripts/templates/characterScreen.handlebars
@@ -1,12 +1,14 @@
 <div class='storySetting' id='characterSelectScreen'>
+<div class='parchment'>
 <h2>Welcome to XYZ Land</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
+</div>
 <br>
 <br>
 <br>
 <br>
-<div class="button" id="createCharacterButton">
+<div class="button createCharacterButton" id="createCharacterButton">
     <button type="button" class="topRowButton " data-toggle="modal" data-target="#createCharacterModal">
       Create Character
     </button>
