--- a/assets/scripts/templates/characterTiles.handlebars
+++ b/assets/scripts/templates/characterTiles.handlebars
@@ -1,7 +1,7 @@
 <div class='characterTiles' id='characterTilesId'>
 {{#each characters as |character|}}
 
-<table class="characterHolder" data-id="{{character.id}}">
+<table class="characterHolder parchment" data-id="{{character.id}}">
       <thead>
         <tr>
           <th scope="col"> {{character.name}}: {{character.player_class.name}}  </th>
