--- a/assets/scripts/templates/combatUi.handlebars
+++ b/assets/scripts/templates/combatUi.handlebars
@@ -3,6 +3,7 @@
   <div class="card-body">
     <button type="button" class="attackButton btn btn-primary">Attack</button>
     <button type="button" class="returnButton btn btn-primary">Return to Tavern</button>
+    <button type="button" class="deadButton btn btn-primary">Game Over</button>
     <label>Combat Log:</label>
     <textarea class="combatLog" id="combatLogId" cols="30" rows="13" readonly></textarea>
   </div>
