--- a/assets/scripts/templates/characterScreen.handlebars
+++ b/assets/scripts/templates/characterScreen.handlebars
@@ -9,7 +9,7 @@
 <br>
 <br>
 <div class="button createCharacterButton" id="createCharacterButton">
-    <button type="button" class="topRowButton " data-toggle="modal" data-target="#createCharacterModal">
+    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#createCharacterModal">
       Create Character
     </button>
 </div>
