--- a/assets/scripts/templates/characterTiles.handlebars
+++ b/assets/scripts/templates/characterTiles.handlebars
@@ -32,8 +32,8 @@
             </form>
           </div>
         </th>
-        <th scope="col"><button data-id="{{character.id}}" class="removeCharacterButton btn btn-primary modal-button">Remove Character</button></th>
-        <th scope="col"><button data-id="{{character.id}}" class="playCharacterButton btn btn-primary modal-button">Play Character</button></th>
+        <th scope="col"><button data-id="{{character.id}}" class="removeCharacterButton btn btn-danger modal-button">Remove Character</button></th>
+        <th scope="col"><button data-id="{{character.id}}" class="playCharacterButton btn btn-warning modal-button">Play Character</button></th>
         </tr>
       </thead>
   </table>
