--- a/assets/scripts/templates/combatUi.handlebars
+++ b/assets/scripts/templates/combatUi.handlebars
@@ -1,11 +1,13 @@
-<div class='row'>
-<div class="card combat bg-info text-white col-xs-4 col-centered mb-3">
+<!-- <div class='row'> -->
+<div class="card combat bg-info col-xs-3 text-white">
   <div class="card-body">
-    <button type="button" class="attackButton btn btn-primary">Attack</button>
+    <div class='row'>
+    <button type="button" class="attackButton btn btn-primary">Use Weapon</button>
     <button type="button" class="returnButton btn btn-primary">Return to Tavern</button>
     <button type="button" class="deadButton btn btn-primary">Game Over</button>
+  </div>
     <label>Combat Log:</label>
-    <textarea class="combatLog" id="combatLogId" cols="30" rows="13" readonly></textarea>
+    <textarea class="combatLog" id="combatLogId" cols="35" rows="15" readonly></textarea>
   </div>
 </div>
-</div>
+<!-- </div> -->
