--- a/assets/scripts/templates/monsterTiles.handlebars
+++ b/assets/scripts/templates/monsterTiles.handlebars
@@ -1,6 +1,6 @@
 <div class='monsterTiles' id='monsterTilesId'>
 
-<div class="card col-xs-4 positionCardMon text-white bg-danger mb-3">
+<div class="card text-white col-xs-3 bg-danger">
   <div class="card-body">
     <h4 class="card-title">{{monster.name}}</h4>
     <h6 class="card-subtitle mb-2">Armor Class: {{monster.armor}}</h6>
