--- a/assets/scripts/templates/questTiles.handlebars
+++ b/assets/scripts/templates/questTiles.handlebars
@@ -6,7 +6,7 @@
       <p class='questInfo'>{{quest.story}}</p>
       <p class='questInfo'>{{quest.reward}} Gold</p>
       <p class='questInfo'>{{quest.renown}} Renown</p>
-      <button data-id="{{quest.id}}" class="startQuestButton btn btn-primary">Start Quest</button>
+      <button data-id="{{quest.id}}" class="startQuestButton btn btn-warning">Start Quest</button>
     </div>
 
 {{/each}}
