--- a/assets/scripts/templates/statsTile.handlebars
+++ b/assets/scripts/templates/statsTile.handlebars
@@ -1,5 +1,5 @@
 
-<div class="card bg-success text-white positionCardChar col-xs-4 mb-3">
+<div class="card bg-success col-xs-4 text-white">
   <div class="card-body">
     <h4 class="card-title">{{adventurer.name}}</h4>
     <h6 class="card-subtitle mb-2">Armor Class: {{adventurer.armor}}</h6>
