Add images to github repo

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,7 +8,7 @@ $white: #fff;
 $font-family: verdana;
 
 .openingPicture {
-  background: url('https://i.imgur.com/GsDyBrC.jpg') no-repeat center center fixed;
+  background: url('https://github.com/lmplaczkiewicz/capstone-project/blob/style/planning/opening.jpg?raw=true') no-repeat center center fixed;
   background-size: cover;
   &:after {
     content: '';
@@ -24,7 +24,7 @@ $font-family: verdana;
 }
 
 .tavernPicture {
-  background: url('https://i.imgur.com/blXCJP9.jpg') no-repeat center center fixed;
+  background: url('https://github.com/lmplaczkiewicz/capstone-project/blob/style/planning/tavern.jpg?raw=true') no-repeat center center fixed;
   background-size: cover;
   &:after {
     content: '';
@@ -215,14 +215,14 @@ th {
 
 .parchment {
   border-style: outset;
-  background: url('https://st2.depositphotos.com/1004788/6286/i/950/depositphotos_62860847-stock-photo-light-gold-background-paper-of.jpg') center;
+  background: url('https://github.com/lmplaczkiewicz/capstone-project/blob/style/planning/parchment.jpg?raw=true') center;
 }
 
 .col {
   width: 250px;
   display: inline-block;
   border-style: outset;
-  background: url('https://st2.depositphotos.com/1004788/6286/i/950/depositphotos_62860847-stock-photo-light-gold-background-paper-of.jpg') no-repeat center;
+  background: url('https://github.com/lmplaczkiewicz/capstone-project/blob/style/planning/parchment.jpg?raw=true') no-repeat center;
   margin: 25px;
 }
 
@@ -230,7 +230,7 @@ th {
   float: right;
   width: 250px !important;
   border-style: outset;
-  background: url('https://st2.depositphotos.com/1004788/6286/i/950/depositphotos_62860847-stock-photo-light-gold-background-paper-of.jpg') no-repeat center;
+  background: url('https://github.com/lmplaczkiewicz/capstone-project/blob/style/planning/parchment.jpg?raw=true') no-repeat center;
   margin: 25px;
 }
 
