Add characterScreen button and README

--- a/assets/scripts/templates/characterScreen.handlebars
+++ b/assets/scripts/templates/characterScreen.handlebars
@@ -1,7 +1,8 @@
 <div class='storySetting' id='characterSelectScreen'>
 <div class='parchment'>
-<h2>Welcome to XYZ Land</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<h2>The Green Dragon Tavern - Khvost, Xymgor's Scar</h2>
+<p>
+  You've traveled long and far, leaving the mundane life you had behind for a chance at adventure. Throughout your life you've heard of The Green Dragon Tavern as a place where adventurers from across Xymgor's Scar group together looking for heroic quests. You've entered into the capital city of Khvost. The bustling streets and hawkers extolling their wares do little to hamper your progress as you approach the building with a wood carving in the likeness of a green dragon hanging above the door. You see the fabled bartender of the tavern, Old Grog Nog, standing outside the wooden door. The stories depicting the bartender were true; patchy black beard, thinning head of hair, potbelly covered by a stained apron, corded muscle arms, and a half-plucked chicken resting on his shoulder. When you reach the threshold of the door, he holds out an arm and guides you inside.
 </p>
 </div>
 <br>
