Add perma death note

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -214,6 +214,7 @@ th {
 }
 
 .parchment {
+  text-align: center;
   border-style: outset;
   background: url('https://github.com/lmplaczkiewicz/capstone-project/blob/style/planning/parchment.jpg?raw=true') center;
 }
