Fix textarea bug and added level-up/level display

--- a/assets/scripts/templates/characterTiles.handlebars
+++ b/assets/scripts/templates/characterTiles.handlebars
@@ -5,6 +5,7 @@
       <thead>
         <tr>
           <th scope="col"> {{character.name}}: {{character.player_class.name}}  </th>
+          <th scope="col"> Level: {{character.level}} </th>
           <th scope="col"> Experience: {{character.xp}} </th>
           <th scope="col"> Armor Class: {{character.armor}} </th>
           <th scope="col"> Health: {{character.health}} </th>
