--- a/assets/scripts/templates/combatUi.handlebars
+++ b/assets/scripts/templates/combatUi.handlebars
@@ -2,6 +2,7 @@
 <div class="card combat bg-info col-xs-3 text-white">
   <div class="card-body">
     <div class='row'>
+    <button type="button" class="initButton btn btn-primary">Roll initiative</button>
     <button type="button" class="attackButton btn btn-primary">Use Weapon</button>
     <button type="button" class="returnButton btn btn-primary">Return to Tavern</button>
     <button type="button" class="deadButton btn btn-primary">Game Over</button>
