--- a/assets/scripts/templates/tavernStatTile.handlebars
+++ b/assets/scripts/templates/tavernStatTile.handlebars
@@ -3,6 +3,7 @@
     <h4 class="card-title">{{adventurer.name}}</h4>
     <h6 class="card-subtitle mb-2">Health: {{adventurer.health}}</h6>
     <h6 class="card-subtitle mb-2">Armor Class: {{adventurer.armor}}</h6>
+    <h6 class="card-subtitle mb-2">Level: {{adventurer.level}}</h6>
     <h6 class="card-subtitle mb-2">Current Exp: {{adventurer.xp}}</h6>
     <h6 class="card-subtitle mb-2">Renown: {{adventurer.renown}}</h6>
     <h6 class="card-subtitle mb-2">Gold: {{adventurer.currency}}</h6>
