--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -273,6 +273,15 @@ textarea {
   margin: auto;
 }
 
+.initButton {
+  margin: auto;
+}
+
+.attackButton {
+  display: none;
+  margin: auto;
+}
+
 .positionCardChar {
   left: 30%;
 }
