Add spelling fix

--- a/assets/scripts/templates/questTiles.handlebars
+++ b/assets/scripts/templates/questTiles.handlebars
@@ -1,5 +1,5 @@
 <div class='parchment'>
-<p>"Welcome to the Green Dragon Tavern! The nicest tavern this side of the Dragon Roost. Nestle up to the hearth and watch what the other adventuers do, you'll learn in no time. Food and a bed costs gold and the only way to earn enough is by taking quests posted on the board behind the bar. Manage not to die and you'll come back richer, and stronger. If you live long enough you might just make a name for yourself." - Old Grog Nog</p>
+<p>"Welcome to the Green Dragon Tavern! The nicest tavern this side of the Dragon Roost. Nestle up to the hearth and watch what the other adventurers do, you'll learn in no time. Food and a bed costs gold and the only way to earn enough is by taking quests posted on the board behind the bar. Manage not to die and you'll come back richer, and stronger. If you live long enough you might just make a name for yourself." - Old Grog Nog</p>
 <h6>This game features permanent death for characters</h6>
 </div>
 
