Add weapon back

--- a/assets/scripts/templates/monsterTiles.handlebars
+++ b/assets/scripts/templates/monsterTiles.handlebars
@@ -5,7 +5,7 @@
     <h4 class="card-title">{{monster.name}}</h4>
     <h6 class="card-subtitle mb-2">Armor Class: {{monster.armor}}</h6>
     <h6 class="card-subtitle mb-2">Exp worth: {{monster.xp}}</h6>
-    <!-- <h6 class="card-subtitle mb-2">Weapon: {{monster.weapon.name}} | Damage: {{monster.weapon.dice}}d{{monster.weapon.sides}}</h6> -->
+    <h6 class="card-subtitle mb-2">Weapon: {{monster.weapon.name}} | Damage: {{monster.weapon.dice}}d{{monster.weapon.sides}}</h6>
     <ul class="display-stats list-group list-group-flush">
       <!-- <li class="list-group-item list-group-item-danger">Attack: {{attack}}</li> -->
       <li class="list-group-item monsterHealthDisplay list-group-item-danger">Health: {{monster.health}}</li>
