Add update submit button

--- a/assets/scripts/templates/characterTiles.handlebars
+++ b/assets/scripts/templates/characterTiles.handlebars
@@ -26,6 +26,9 @@
                       <label>Character Name</label>
                       <input type="text" class="form-control" name="character[name]" id="characterUpdate" value="{{character.name}}" required>
                       </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-primary modal-button" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary modal-button" id="createButton">Update Character</button>
                     </div>
                   </div>
                 </div>
